# haskell-animation-tp

./: .gitignore  CHANGELOG.md  cabalAnimation.cabal
app/: Lib.hs  Main.hs  cactus.txt  dino.txt  scenario.txt
