cabal-version:      2.4
name:               cabalAnimation
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Gabriel La Torre
maintainer:         latorregab@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable cabalAnimation
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Lib

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
        ansi-terminal ^>=0.11,
        text,
        text-conversions
    hs-source-dirs:   app
    default-language: Haskell2010
